[package]
name = "ore-boost-rebase-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
bincode = "1.3.3"
env_logger = "0.11.6"
helius = "0.2.4"
log = "0.4.25"
ore-boost-api = { git = "https://github.com/regolith-labs/ore-boost", rev = "d3c0a2c" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
solana-account-decoder = "2.1.12"
solana-client = "2.1.12"
solana-sdk = "2.1.12"
steel = "3.0.2"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
